8 November 2010: Wouter
	- release tag 1.4.7.
	- trunk is version 1.4.8.

5 November 2010: Wouter
	- do not synthesize a CNAME message from cache for qtype DS.

4 November 2010: Wouter
	- Use central entropy to seed threads.

3 November 2010: Wouter
	- Change the rtt used to probe EDNS-timeout hosts to 1000 msec.

2 November 2010: Wouter
	- tag 1.4.7rc1.
	- code review.

1 November 2010: Wouter
	- GOST code enabled by default (RFC 5933).

27 October 2010: Wouter
	- Fix uninit value in dump_infra print.
	- Fix validation failure for parent and child on same server with an
	  insecure childzone and a CNAME from parent to child.
	- Configure detects libev-4.00.

26 October 2010: Wouter
	- dump_infra and flush_infra commands for unbound-control.
	- no timeout backoff if meanwhile a query succeeded.
	- Change of timeout code.  No more lost and backoff in blockage.
	  At 12sec timeout (and at least 2x lost before) one probe per IP
	  is allowed only.  At 120sec, the IP is blocked.  After 15min, a
	  120sec entry has a single retry packet.

25 October 2010: Wouter
	- Configure errors if ldns is not found.

22 October 2010: Wouter
	- Windows 7 fix for the installer.

21 October 2010: Wouter
	- Fix bug where fallback_tcp causes wrong roundtrip and edns
	  observation to be noted in cache.  Fix bug where EDNSprobe halted
	  exponential backoff if EDNS status unknown.
	- new unresponsive host method, exponentially increasing block backoff.
	- iana portlist updated.

20 October 2010: Wouter
	- interface automatic works for some people with ip6 disabled.
	  Therefore the error check is removed, so they can use the option.

19 October 2010: Wouter
	- Fix for request list growth, if a server has long timeout but the
	  lost counter is low, then its effective rtt is the one without
	  exponential backoff applied.  Because the backoff is not working.
	  The lost counter can then increase and the server is blacklisted,