@@ -1,6 +1,7 @@
 8 November 2010: Wouter
 	- release tag 1.4.7.
 	- trunk is version 1.4.8.
+	- Be lenient and accept imgw.pl malformed packet (like BIND).
 
 5 November 2010: Wouter
 	- do not synthesize a CNAME message from cache for qtype DS.
